// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "Grantee",
  "docs": Object {},
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.GrantRead.parameter.Grantee",
  "jsiiId": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "sourceFile": "lib/auth-token.ts",
  "sourceLine": 8,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "Amazon.CDK.AWS.IAM.IGrantable",
        "jsiiId": "@aws-cdk/aws-iam.IGrantable",
        "jsiiProjectName": "@aws-cdk/aws-iam",
        "jsiiProjectVersion": "99.99.99",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
}
`;

exports[`csharp snapshot 2`] = `
" \`Grantee\`<sup>Required</sup> <a name=\\"Grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* undefined

---
"
`;

exports[`go snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.AuthorizationToken.GrantRead.parameter.grantee",
  "jsiiId": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "sourceFile": "lib/auth-token.ts",
  "sourceLine": 8,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "github.com/aws/aws-cdk-go/awscdk/awsiam/awscdkawsiam.IGrantable",
        "jsiiId": "@aws-cdk/aws-iam.IGrantable",
        "jsiiProjectName": "@aws-cdk/aws-iam",
        "jsiiProjectVersion": "99.99.99",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
}
`;

exports[`go snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* undefined

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.grantRead.parameter.grantee",
  "jsiiId": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "sourceFile": "lib/auth-token.ts",
  "sourceLine": 8,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "software.amazon.awscdk.services.iam.IGrantable",
        "jsiiId": "@aws-cdk/aws-iam.IGrantable",
        "jsiiProjectName": "@aws-cdk/aws-iam",
        "jsiiProjectVersion": "99.99.99",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
}
`;

exports[`java snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* undefined

---
"
`;

exports[`newlines in "defaults" are removed 1`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* undefined
- *Default:* default option with a newline

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken.grant_read.parameter.grantee",
  "jsiiId": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "sourceFile": "lib/auth-token.ts",
  "sourceLine": 8,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "aws_cdk.aws_iam.IGrantable",
        "jsiiId": "@aws-cdk/aws-iam.IGrantable",
        "jsiiProjectName": "@aws-cdk/aws-iam",
        "jsiiProjectVersion": "99.99.99",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
}
`;

exports[`python snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* undefined

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "default": undefined,
  "displayName": "grantee",
  "docs": Object {},
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "jsiiId": "@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee",
  "optional": undefined,
  "sourceFile": "lib/auth-token.ts",
  "sourceLine": 8,
  "submoduleFqn": undefined,
  "submoduleJsiiId": undefined,
  "type": Object {
    "formattingPattern": "%",
    "types": Array [
      Object {
        "displayName": "IGrantable",
        "fqn": "@aws-cdk/aws-iam.IGrantable",
        "jsiiId": "@aws-cdk/aws-iam.IGrantable",
        "jsiiProjectName": "@aws-cdk/aws-iam",
        "jsiiProjectVersion": "99.99.99",
        "packageName": "@aws-cdk/aws-iam",
        "packageVersion": "99.99.99",
      },
    ],
  },
}
`;

exports[`typescript snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a name=\\"grantee\\" id=\\"@aws-cdk/aws-ecr.AuthorizationToken.grantRead.parameter.grantee\\"></a>

- *Type:* undefined

---
"
`;
